test/errors/too_long_tape.trm
machine Error

states: q0 q1
accept: q1
init: q0
tapes: 1 5 "aaaaaaa"

q0 | '_' | q0 |  ?  | ?
q0 | 'q' | q1 | 'q' | =

end